<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.b07storeapp.Order_DetailActivity">


    <TextView
        android:id="@+id/view_order_id"
        android:layout_width="134dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18sp"
        android:text="@string/orderid"
        android:textColor="#673AB7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/view_order_completed"
        android:layout_width="241dp"
        android:layout_height="26dp"
        android:layout_marginStart="25dp"
        android:text="@string/order_status"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_order_id" />

    <TextView
        android:id="@+id/view_order_items"
        android:layout_width="241dp"
        android:layout_height="26dp"
        android:layout_marginStart="25dp"
        android:text="@string/items_"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_order_totalprice" />

    <TextView
        android:id="@+id/view_order_totalprice"
        android:layout_width="241dp"
        android:layout_height="26dp"
        android:layout_marginStart="25dp"
        android:text="@string/total_price"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_order_completed" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="161dp"
        android:layout_height="31dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_detail"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
