<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <EditText
        android:id="@+id/edititemprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Enter Price Here"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edititemweight" />

    <TextView
        android:id="@+id/brandheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/brand"
        app:layout_constraintBottom_toTopOf="@+id/edititembrand"
        app:layout_constraintStart_toStartOf="@+id/edititembrand" />

    <EditText
        android:id="@+id/edititemweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="Enter Weight Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edititembrand" />

    <EditText
        android:id="@+id/edititembrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="Enter Brand Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edititemname" />

    <TextView
        android:id="@+id/weightheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/edititemweight"
        app:layout_constraintStart_toStartOf="@+id/edititemweight" />

    <TextView
        android:id="@+id/weightheader2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/edititemprice"
        app:layout_constraintStart_toStartOf="@+id/edititemprice" />

    <ImageButton
        android:id="@+id/additembackbutton"
        android:layout_width="62dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backbuttondescription"
        android:onClick="BackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/itemsheader"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/edit_item"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/doneeditingitem"
        app:layout_constraintStart_toEndOf="@+id/additembackbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edititemname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="Enter Name Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemsheader" />

    <TextView
        android:id="@+id/nameheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/editingitemname"
        app:layout_constraintBottom_toTopOf="@+id/edititemname"
        app:layout_constraintStart_toStartOf="@+id/edititemname" />

    <Button
        android:id="@+id/doneeditingitem"
        android:layout_width="97dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="ADD"
        android:onClick="AddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/invalidentrynotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#EA1818"
        app:layout_constraintBottom_toTopOf="@+id/edititemname"
        app:layout_constraintEnd_toEndOf="@+id/edititemname"
        app:layout_constraintStart_toStartOf="@+id/edititemname"
        app:layout_constraintTop_toBottomOf="@+id/itemsheader"
        app:layout_constraintVertical_bias="0.37" />

</androidx.constraintlayout.widget.ConstraintLayout>